--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "webpackbuild": "webpack --config webpack.config.js --mode development"
     },
     "eslintConfig": {
         "extends": [
@@ -45,6 +46,14 @@
         ]
     },
     "devDependencies": {
-        "@cfaester/enzyme-adapter-react-18": "^0.7.1"
-    }
+        "@cfaester/enzyme-adapter-react-18": "^0.7.1",
+        "webpack": "^5.91.0",
+        "webpack-bundle-analyzer": "^4.10.1",
+        "webpack-cli": "^5.1.4"
+    },
+    "main": "index.js",
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": ""
 }
